--- a/ring_hassio/package.json
+++ b/ring_hassio/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "dotenv-extended": "^2.8.0",
+        "ring-client-api": "9.15.3",
         "http": "^0.0.0",
         "zlib": "^1.0.5",
         "url": "^0.11.0"
